# debt-collector

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PLAN.md  TASKS.md  docker-compose.yml  instructions.md
scripts/: add_sms_tool_to_agent.py  create_agent.py  generate_voice_samples.py  list_voices.py  seed_data.py  setup_elevenlabs_agent.py  setup_phone.py  test_call.py
scripts/custom_prompts/: kpn_mobile_subscription.py
services/client-api/: alembic.ini  requirements.txt
services/client-api/alembic/: env.py
services/client-api/alembic/versions/: 92f3aa429cbc_initial_schema.py
services/client-api/scripts/: seed.py  test_supabase_connection.py
services/client-api/src/: __init__.py  main.py
services/client-api/src/api/: schemas.py
services/client-api/src/api/routes/: calls.py  dashboard.py  debtors.py
services/client-api/src/core/: config.py  database.py
services/client-api/src/models/: __init__.py  call.py  client.py  debtor.py  payment_promise.py  sms_log.py
shared/: pyproject.toml  requirements.txt
shared/elevenlabs_integration/: __init__.py  agent.py  calls.py  extraction.py  phone.py  tools.py
shared/factories/: __init__.py  client_factory.py  debtor_factory.py
shared/prompts/: __init__.py  debt_collection.py  extraction.py  sms_templates.py
shared/schemas/: __init__.py  call.py  debtor.py  enums.py  sms.py
shared/tests/: __init__.py  test_factories.py  test_schemas.py  test_sms.py  test_tools.py
shared/twilio_sms/: __init__.py  messages.py
