[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debt-collector-shared"
version = "0.1.0"
description = "Shared models and schemas for debt collector services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "elevenlabs>=1.0.0",
    "openai>=1.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "factory-boy>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "schemas*", "prompts*", "elevenlabs*", "factories*"]
